crates/oxc_css_parser/tests/recoverable/eof/unterminated-string-eof.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: unterminated string
  ┌─ unterminated-string-eof.css:2:12
  │
2 │   content: "abc
  │            ^^^^

error: unclosed block before end of file
  ┌─ unterminated-string-eof.css:1:3
  │
1 │ a {
  │   ^
